@@ -1,3 +1,4 @@
+7/30/13 convert particle size and number of particles-per-mole from properties of Solute to constants in PrecipitateNode, in preparation for performance optimization, #4
 7/30/13 clean up PrecipitateNode, in preparation for performance optimization, #4
 7/30/13 remove dependency of PrecipitateParticleNode on Solute, in preparation for performance optimization, #4
 7/30/13 change Solute.particleSize to Solute.particleLength, since particles are square
